--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
         <div class="row js--wp-3">
             <div class="col span-1-of-4 box">
-                <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
+                <img src="resources/img/lisbon-3-min.jpg" alt="Lisbon">
                 <h3>Lisbon</h3>
                 <div class="city-feature">
                     <ion-icon name="person" class="icon-small"></ion-icon>
@@ -193,7 +193,7 @@
             </div>
 
             <div class="col span-1-of-4 box">
-                <img src="resources/img/san-francisco.jpg" alt="San Francisco">
+                <img src="resources/img/san-francisco-min.jpg" alt="San Francisco">
                 <h3>San Francisco</h3>
                 <div class="city-feature">
                     <ion-icon name="person" class="icon-small"></ion-icon>
@@ -210,7 +210,7 @@
             </div>
 
             <div class="col span-1-of-4 box">
-                <img src="resources/img/berlin.jpg" alt="Berlin">
+                <img src="resources/img/berlin-min.jpg" alt="Berlin">
                 <h3>Berlin</h3>
                 <div class="city-feature">
                     <ion-icon name="person" class="icon-small"></ion-icon>
@@ -227,7 +227,7 @@
             </div>
 
             <div class="col span-1-of-4 box">
-                <img src="resources/img/london.jpg" alt="London">
+                <img src="resources/img/london-min.jpg" alt="London">
                 <h3>Lisbon</h3>
                 <div class="city-feature">
                     <ion-icon name="person" class="icon-small"></ion-icon>
